# Investment-Server

./: .gitignore  CMakeLists.txt  README.md  main.cpp
migrations/: MOCK_DATA_STOCKS.sql  MOCK_DATA_USERS.sql  MOCK_DATA_USER_STOCK.sql  v0.0.1.sql  v0.0.2.sql
src/BusinessLogic/: CMakeLists.txt  StockService.cpp  StockService.h  UserService.cpp  UserService.h
src/BusinessLogic/Models/: ResultType.h  Stock.cpp  Stock.h  User.cpp  User.h  UserStock.cpp  UserStock.h
src/BusinessLogic/Repositories/: DatabaseConnectionInterface.h  StockRepositoryInterface.h  UserRepositoryInterface.h  UserStockRepositoryInterface.h
src/BusinessLogic/Services/: StockServiceInterface.h  UserServiceInterface.h  UserStockServiceInterface.h
src/DataAccess/: CMakeLists.txt  Stock.cpp  Stock.h  User.cpp  User.h
src/DataAccess/Repositories/: DatabaseConnection.cpp  DatabaseConnection.h  StockRepository.cpp  StockRepository.h  UserRepository.cpp  UserRepository.h  UserStockRepository.cpp  UserStockRepository.h
src/DataAccess/Services/: StockService.cpp  StockService.h  UserService.cpp  UserService.h  UserStockService.cpp  UserStockService.h
src/Presentation/: CMakeLists.txt  Listener.cpp  Listener.h  Server.cpp  Server.h  Session.cpp  Session.h  TcpServer.cpp  TcpServer.h
tests/: CMakeLists.txt  Repository_tests.cpp  Server_tests.cpp  Service_tests.cpp
